--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "express": "^4.17.1",
         "express-jwt": "^6.1.0",
         "express-session": "^1.17.2",
+        "js-cookie": "^3.0.1",
         "jwks-rsa": "^2.0.5",
         "mysql": "^2.18.1",
         "react": "^17.0.2"
