--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-grid-layout": "^1.2.5",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
