--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
+    "js-cookie": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
