--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
         "axios": "^0.24.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
+        "btoa": "^1.2.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.17.1",
@@ -19,6 +20,7 @@
         "js-cookie": "^3.0.1",
         "jwks-rsa": "^2.0.5",
         "mysql": "^2.18.1",
+        "qs": "^6.10.2",
         "react": "^17.0.2"
     }
 }
