--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-google-login": "^5.2.2",
     "react-grid-layout": "^1.2.5",
     "react-icons": "^4.3.1",
@@ -31,6 +32,7 @@
     "react-sizeme": "^3.0.1",
     "react-transition-group": "^4.4.2",
     "recharts": "^2.1.6",
+    "styled-components": "^5.3.3",
     "typescript": "4.1.3",
     "web-vitals": "^1.1.2"
   },
