--- a/client/src/WidgetConfig.json
+++ b/client/src/WidgetConfig.json
@@ -36,7 +36,7 @@
         }
     },
     "e": {
-        "name": "Spotify",
+        "name": "Spotify Last Release",
         "initialLayouts": {
             "x": "4",
             "y": "4",
