Add spotify top 50

--- a/client/src/WidgetConfig.json
+++ b/client/src/WidgetConfig.json
@@ -43,5 +43,14 @@
             "w": "2",
             "h": "4"
         }
+    },
+    "f": {
+        "name": "Spotify Top 50",
+        "initialLayouts": {
+            "x": "7",
+            "y": "3",
+            "w": "4",
+            "h": "4"
+        }
     }
 }
