--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-transition-group": "^4.4.2",
     "recharts": "^2.1.6",
     "typescript": "4.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
