Correct error minor

--- a/client/src/WidgetConfig.json
+++ b/client/src/WidgetConfig.json
@@ -47,13 +47,12 @@
             "h": 4
         }
     },
-    "e": {
-        "name": "Nasa's Picture of the day",
+    "Nasa's Picture of the day": {
         "initialLayouts": {
-            "x": "0",
-            "y": "4",
-            "w": "2",
-            "h": "4"
+            "x": 0,
+            "y": 4,
+            "w": 2,
+            "h": 4
         }
     }
 }
